welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:24: error: method motifsuivantd is defined twice
  conflicting symbols both originated in file 'plm.runtime1.PictureMono3'
def motifsuivantd() {for (i <- 1 to 27) {avance()}}
    ^